build(android): migrate to built-in Kotlin